--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 #gameBoard {
-    height: 500px;
-    width: 500px;
-    border: 1px solid green;
+    height: 700px;
+    width: 700px;
+    border: 5px solid brown;
     background-color: green;
     text-align: center;
     margin-top: 200px;
-    margin-left: 200px;
 }
 
 body {
